@@ -7,6 +7,10 @@ Changelog
 - Include missing dependency on plone.app.locales.
   [hannosch]
 
+- Fixed the toc.js to not turn heading text containing an "@" into the link.
+  Closes http://dev.plone.org/plone/ticket/7949
+  [sbruno, calvinhp]
+
 - Fixed the form_tabbing to use the correct buttons names. Closes
   http://dev.plone.org/plone/ticket/7559
   [lucie, calvinhp]
